Sat Jun 18 21:32:02 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm.c, vm_core.h (rb_vm_stack_to_heap): remove const.
	  It makes compilations warnings.

Sat Jun 18 18:54:15 2011  Koichi Sasada  <ko1@atdot.net>

	* vm.c, vm_core.h (rb_vm_stack_to_heap): fix "const" place.

Sat Jun 18 17:23:38 2011  Tanaka Akira  <akr@fsij.org>

	* eval.c, hash.c, load.c, proc.c, range.c, thread.c, time.c: don't
	  declare internal functions.

	* internal.h, vm_core.h: declare internal functions.

	* array.c: include internal.h.

	* common.mk: update dependency for array.o.

Sat Jun 18 13:39:33 2011  Tanaka Akira  <akr@fsij.org>

	* internal.h: declarations declared in include/ruby/*.h removed.

Sat Jun 18 12:42:17 2011  Tanaka Akira  <akr@fsij.org>

	* method.h, internal.h iseq.h: declare internal functions.

	* compile.c, eval.c, iseq.c, object.c, parse.y, proc.c, process.c,
	  thread.c, vm.c, vm_eval.c, vm_insnhelper.c, vm_method.c: don't
	  declare internal functions.

	  Note that rb_method_entry_eq() is defined in vm_method.c but
	  there was a declaration in proc.c with different const-ness.
	  Now it is declared in method.h with same const-ness to the
	  definition.

	* object.c (rb_mod_module_exec): don't declare functions declared in
	  include/ruby/intern.h.
	  
Sat Jun 18 12:05:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward/classext.h: for evil gems.  fixed #4803

Sat Jun 18 11:12:13 2011  Tanaka Akira  <akr@fsij.org>

	* common.mk: update dependencies.

Sat Jun 18 11:09:03 2011  Tanaka Akira  <akr@fsij.org>

	* io.c: supress warnings.

Sat Jun 18 10:22:39 2011  Tanaka Akira  <akr@fsij.org>

	* internal.h: declare more internal functions.

	* iseq.h (rb_method_get_iseq): declared.

	* compile.c, eval.c, eval_error.c, iseq.c, parse.y, proc.c, range.c,
	  ruby.c, time.c, util.c, vm.c: don't declare internal functions.

	* eval.c, parse.y, thread_pthread.c: non-existing function declarations
	  removed.
